	argument.

	* Raster.m ([Raster -draw:X:Y:]): Now calls drawX:Y:raster:,
	not drawOn:X:Y:GC:Caller.  Define in both X and Win32 cases.

	* Raster.h: Include Drawer.h, not XDrawer.h.  Do it in both
	X and Win32 cases.
	(-draw:X:Y:): Make first argument conform to Drawer, not XDrawer
	protocol.  Do it in both X and Win32 cases.

	* Makefile (XDRAWER_H): Remove.  Change to Drawer.h throughout.

1998-04-02  Marcus G. Daniels  <mgd@wijiji.santafe.edu>

	* win32dib.[ch] (dib_fill): Make width and height arguments unsigned.
	(dib_ellipse): New function.

	* internal.[hm]: New function tkobjc_raster_ellipse.

	* Raster.[hm]: New method ellipseX0:Y0:X1:Y1:Width:Color:.

	* TkExtra.m (ensureBltSupportFiles): Cope with the inability
	to find the Swarm source tree; use the current directory.
	([TkExtra -preInitWithArgc:argv:]): Load bltGraph.tcl instead
	of setting up the autoload path.  Look for word.tcl in the
	current directory if there is not value for [info library].

1998-03-31  Marcus G. Daniels  <mgd@wijiji.santafe.edu>

	* ZoomRaster.m ([ZoomRaster -handleConfigureWidth:Height:]): Don't
	adjust newWidth unless there is disagreement between the computed
	width and height zoom.

1998-03-29  Marcus G. Daniels  <mgd@wijiji.santafe.edu>

	* win32dib.c (dib_createBitmap): Round frameWidth up to 4.
	(dib_blit, dib_paintBlit): Round down in case width + x exceeds
	frameWidth.

	* internal.m (tkobjc_raster_clear): New function.

	* internal.h: Declare tkobjc_raster_clear.

	* ZoomRaster.m ([ZoomRaster -_setConfigureInfo_:]): New method.
	([ZoomRaster -createEnd]): Call _setConfigureInfo_ for Configure
	and Expose instead of just a (inline) Configure.
	([ZoomRaster -handleConfigureWidth:Height:]): Let newWidth exceed
	newHeight (Win32 seems to like to think better of small window
	widths).
	([ZoomRaster -handleExposeWidth:Height:]): New method.  Calls
	tkobjc_raster_clear for new extent.

	* ZoomRaster.h: Declare handleExposeWidth:Height:.
